---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2021-05-02
  Changes:
    - Adjusted how ore icon variations are generated in line with changes in Artisanal Reskins: Library
    - Adjusted the progression tier of the algae farms
    - Added explosions and particles to warehouses and big chests
  Bugfixes:
    - Fixed that pipes did not respect the setting "Use Angel's material colors for pipes"
    - Fixed that icon assignment for Ore crusher 4 with Extended Angels was being overwritten
    - Fixed that pipe to ground icons had black transparent pixels
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2021-03-22
  Features:
    - The following entity implementations are preliminary fast-passes that will be gradually be replaced in the future with upgraded models re-rendered in high resolution, and are intended merely to complete the color tiering
    - Implemented the crystallizer, electrowinning cell, filtration unit, hydro plant, liquifier, ore crusher, ore floatation cell, ore leaching plant, ore powderizer, ore refinery, ore sorting facility, salination plant and the washing plant from Angel's Refining
    - Implemented the advanced chemical plant, air filter, chemical plant, electric boiler, electrolyser, oil & gas separator, and the steam cracker from Angel's Petrochemical Processing; note, Artisanal Reskins: Compatibility must be version 1.1.2 or higher if present
    - Implemented the algae farm from Angel's Bioprocessing
  Changes:
    - Dropped "beta" from thumbnail as all structures now have color masks; re-rendering is ongoing and will continue until complete
---------------------------------------------------------------------------------------------------
Version: 1.1.4